able to send messages from popup to content script

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -27,6 +27,8 @@
     ],
     "background": {
         "scripts": [
+            /* trick chrome into showing the background tab */
+            "./js/empty.js"
         ]
     }
 }
